--- a/index.html
+++ b/index.html
@@ -24,22 +24,53 @@
 
   <body class="">
 
-    <img src="./dist/images/logo.svg" alt="fumblingwithbuttons.com" id="logo" class="logo">
-    <div id="button" class="button"></div>
-    <div class="airhorns">
-      <label for="airhorn--penis">
-        <input type="radio" value="penis" name="airhorn" id="airhorn--penis" checked="checked">
-        <span>Penis</span>
+    <div class="switches">
+
+      <input type="checkbox" class="light-switch" id="light-switch-one" />
+      <label for="light-switch-one" class="light-switch-label">
+        <div class="screw"></div>
+        <div class="switch"></div>
+        <div class="screw"></div>
       </label>
-      <label for="airhorn--butt">
-        <input type="radio" value="butt" name="airhorn" id="airhorn--butt">
-        <span>Butt</span>
+
+      <input type="checkbox" class="light-switch" id="light-switch-two"/>
+      <label for="light-switch-two" class="light-switch-label">
+        <div class="screw"></div>
+        <div class="switch"></div>
+        <div class="screw"></div>
       </label>
-      <label for="airhorn--boobs">
-        <input type="radio" value="boobs" name="airhorn" id="airhorn--boobs">
-        <span>Boobs</span>
+
+      <input type="checkbox" class="light-switch" id="light-switch-three"/>
+      <label for="light-switch-three" class="light-switch-label">
+        <div class="screw"></div>
+        <div class="switch"></div>
+        <div class="screw"></div>
       </label>
+
+      <input type="checkbox" class="light-switch" id="light-switch-four"/>
+      <label for="light-switch-four" class="light-switch-label">
+        <div class="screw"></div>
+        <div class="switch"></div>
+        <div class="screw"></div>
+      </label>
+
+      <input type="checkbox" class="light-switch" id="light-switch-five"/>
+      <label for="light-switch-five" class="light-switch-label">
+        <div class="screw"></div>
+        <div class="switch"></div>
+        <div class="screw"></div>
+      </label>
+
+      <input type="checkbox" class="light-switch" id="light-switch-six"/>
+      <label for="light-switch-six" class="light-switch-label">
+        <div class="screw"></div>
+        <div class="switch"></div>
+        <div class="screw"></div>
+      </label>
+
     </div>
+
+    <div id="background"></div>
 
   </body>
 
